Removed functions related to removed icons, added dummy because there is still something calling objects

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -122,6 +122,7 @@
                 <button id="close" class="toolbarButton close" title="Close" onclick="javascript:history.back();" tabindex="12" data-l10n-id="close">
                   <span data-l10n-id="close_label">Close</span>
                 </button>
+                <span id="openFile" style="display: none;">Dummy</span>
               </div>
               <div class="outerCenter">
                 <div class="innerCenter" id="toolbarViewerMiddle">
